# hugo

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  README_old.txt  aclocal.m4  bios.c  bios.h  bp.c  build.sh  callbacks.c  callbacks.h  cd.c  cheat.c  cheat.h  cleantyp.h  config.h.in  configure  configure.ac  configure.scan  debug.c  debug.h  dis.c  dis.h  dis_runtime.h  edit_ram.c  fixdos.bat  followop.c  format.c  gfx.c  gfx.h  globals.h  gtk_main-server.c  gtk_main-server.h  gtk_main.c  gtk_main.h  (+85 more)
cvs/: Entries
debug/: debug.c  debug.h  dis.c  dis.h  dis_cst.h  edit_ram.c  edit_ram.h  followop.c  followop.h  format.c  format.h  optable.c  optable.h  view_inf.c  view_inf.h  view_zp.c  view_zp.h
debug/cvs/: Entries  Repository
doc/: changemt.fr  changes  cheat.txt  compile.doc  faq  file_id.diz  hu-go!.es  hu-go!.fr  hu-go!.txt  scancode.txt
doc/cvs/: Entries  Repository
doc/man1/: hugo.1  hugod.1
dos/: aspi_int.h  cleantyp.h  libamp.h  osd_cd.c  osd_cd.h  osd_gfx.c  osd_gfx.h  osd_keyboard.bkp  osd_keyboard.c  osd_keyboard.h  osd_machine.c  osd_machine.h  scsidefs.h
dos/cvs/: Entries  Repository  Root
extra/: dracx.hcd  hu-go!.pif  install  install.sh  pong.pce
extra/cvs/: Entries  Repository
generic/: TODO  cleantyp.h  osd_cd.c  osd_cd.h  osd_gfx.c  osd_gfx.h  osd_keyboard.c  osd_keyboard.h  osd_machine.c  osd_machine.h
generic/cvs/: Entries  Repository
gfx/: eagle.h  gfx.c  gfx.h  lang_interf.h  sprite.c  sprite.h  subs_eagle.c  trans_fx.c  trans_fx.h
gfx/cvs/: Entries  Repository
gui/: gui.c  gui.h  interf.c  interf.h  specific_interface.c  specific_interface.h
gui/cvs/: Entries  Repository
kernel/: bp.h  cdemu.h  codes.h  hucodes.h  hutables.h  m6502.c  m6502.h
kernel/cvs/: Entries  Repository
kernel_ds/: bios.c  bios.h  bp.c  bp.h  defs.h  dis.h  globals.h  h6280.c  h6280.h  interupt.h  video.h
kernel_ds/cvs/: Entries  Repository
lib/cvs/: Entries  Repository
lib/dos/cvs/: Repository
lib/linux/cvs/: Repository
lib/windows/cvs/: Entries  Repository
linux/: cleantyp.bkp  cleantyp.h  osd_cd.bkp  osd_cd.c  osd_cd.h  osd_gfx.bkp  osd_gfx.c  osd_gfx.h  osd_gfx_sdl.c  osd_keyboard.bkp  osd_keyboard.c  osd_keyboard.h  osd_machine.c  osd_machine.h  osd_machine_sdl.c  osd_machine_sdl.h  osd_snd.c  osd_snd.h  tcedit.dst  test_joy.c
linux/cvs/: Entries  Repository
misc/: Trrus.h  cd.c  cd.h  cheat.c  cheat.h  config.c  config.h  crc_ctl.h  data.h  hcd.c  hcd.h  lang.c  lang.h  list_rom.c  list_rom.h  lsmp3.c  lsmp3.h  subs_eagle.c  subs_eagle.h
misc/cvs/: Entries  Repository
pixmaps/: i-cdrom.xpm  pce.xpm
sound/: mix.c  mix.h  sound.c  sound.h
sound/cvs/: Entries  Repository
win/: aspi.h  cleantyp.h  myaspi32.h  osd_cd.c  osd_cd.h  osd_gfx.c  osd_gfx_sdl.c  osd_keyboard.c  osd_keyboard.h  osd_machine.c  osd_machine.h  osd_machine_sdl.c  osd_snd.h
win/cvs/: Entries  Repository
